# mx-city-pnl-dash

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pages.yml
scripts/: _bq.py  _pnl.py  fetch_raw.py  refresh_data.py
site/: index.html
site/css/: styles.css
site/data/: kpi_pnl.json  kpi_pnl_facts.json
site/js/: app.js
