[project]
name = "mx-city-pnl-dash"
version = "0.1.0"
description = "P&L por ciudad · MX — sitio estatico + refresh manual contra apartment_tracker_mx"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery>=3.25",
    "pandas>=2.2",
    "db-dtypes>=1.3",
    "pyarrow>=16.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
